--- a/server/express/package.json
+++ b/server/express/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
